complaint Section done

--- a/resources/userPanel/viewComplaint.html
+++ b/resources/userPanel/viewComplaint.html
@@ -1,7 +1,5 @@
 {%extends 'userPanel/dash.html'%}
    
-   
-
       {%block mainblock%} 
 <fieldset>
     <legend> <h1>All Complaints submit by you</h1></legend>
@@ -12,33 +10,29 @@
             <th>complaint id</th>
               <th>Date</th>
               <th>Status</th>
+              <th>Details</th>
               <th>update</th>
               <th>delete</th>
           </tr>
         </thead>
 
         <tbody>
+          {% for complaint in complaints %}
           <tr>
-              <td>$0.87</td>
-            <td>Alvin</td>
-            <td>Eclair</td>
-            <td>$0.87</td>
-             <td>$0.87</td>
+            <td>{{complaint.CID}}</td>
+            <td>{{complaint.cDate}}</td>
+            <td>{{complaint.status|e}}</td>
+            <td>,<a href="/userPanel/complaintDetails/?id={{complaint.CID|e}}"> <i class="Small
+
+ material-icons">details</i></a></td>
+             <td>,<a href="?{{complaint.CID|e}}"> <i class="Small
+
+ material-icons">update</i></a></td>
+               <td>,<a href="?{{complaint.CID|e}}"> <i class="Small
+
+ material-icons">delete_forever</i></a></td>
           </tr>
-          <tr>
-              <td>$0.87</td>
-            <td>Alan</td>
-            <td>Jellybean</td>
-            <td>$3.76</td>
-             <td>$0.87</td>
-          </tr>
-          <tr>
-              <td>$0.87</td>
-            <td>Jonathan</td>
-            <td>Lollipop</td>
-            <td>$7.00</td>
-             <td>$0.87</td>
-          </tr>
+            {% endfor %}
         </tbody>
       </table>
 </fieldset>
