--- a/resources/adminPanel/dash.html
+++ b/resources/adminPanel/dash.html
@@ -21,6 +21,7 @@
 
     <link rel="stylesheet" href="css/style.css" type="text/css">
     
+    <link rel="stylesheet" href="/css/ownstyle.css" type="text/css">
 </head>
 {%endblock%}
 <body>
@@ -72,28 +73,28 @@
 
       <div class="col s3">
          <div align="center"  class="card-panel red accent-4">
-        <span class="white-text">NUMBER OF COMPLAINTS UNSEEN
+        <span class="white-text">COMPLAINTS <br> UNSEEN
           <h2 align="center">{{count1}}</h2>
         </span>
       </div>
       </div>
       <div class="col s3">
       <div align="center" class="card-panel red darken-1">
-        <span class="white-text">NUMBER OF COMPLAINTS PENDING <h2 align="center">{{count2}}</h2>
+        <span class="white-text">COMPLAINTS <br> PENDING <h2 align="center">{{count2}}</h2>
         </span>
        
       </div>
       </div>
       <div class="col s3">
       <div align="center"  class="card-panel orange darken-1">
-        <span class="white-text">NUMBER OF COMPLAINTS  ACTIVE
+        <span class="white-text">COMPLAINTS <br>  ACTIVE
           <h2 align="center">{{count3}}</h2>
         </span>
       </div>
       </div>
        <div class="col s3">
       <div align="center"  class="card-panel  green darken-4">
-        <span class="white-text">NUMBER OF COMPLAINTS RESOLVED
+        <span class="white-text">COMPLAINTS <br>  RESOLVED
           <h2 align="center">{{count4}}</h2>
         </span>
       </div>
@@ -104,19 +105,19 @@
         <ul class="collapsible">
     <li>
       <div class="collapsible-header"><i class="material-icons">filter_drama</i>ABOUT UNSEEN COMPLAINTS </div>
-      <div class="collapsible-body"><span>Lorem ipsum dolor sit amet. We hope you have enjoyed using Materialize and if you feel like it has helped you out and want to support the team you can help us by donating or backing us on Patreon. Any amount would help support and continue development on this project and is greatly appreciated.</span></div>
+      <div class="collapsible-body grey lighten-2"><span>Lorem ipsum dolor sit amet. We hope you have enjoyed using Materialize and if you feel like it has helped you out and want to support the team you can help us by donating or backing us on Patreon. Any amount would help support and continue development on this project and is greatly appreciated.</span></div>
     </li>
     <li>
       <div class="collapsible-header"><i class="material-icons">place</i>ABOUT PENDING COMPLAINTS</div>
-      <div class="collapsible-body"><span>Lorem ipsum dolor sit amet. We hope you have enjoyed using Materialize and if you feel like it has helped you out and want to support the team you can help us by donating or backing us on Patreon. Any amount would help support and continue development on this project and is greatly appreciated.</span></div>
+      <div class="collapsible-body grey lighten-2"><span>Lorem ipsum dolor sit amet. We hope you have enjoyed using Materialize and if you feel like it has helped you out and want to support the team you can help us by donating or backing us on Patreon. Any amount would help support and continue development on this project and is greatly appreciated.</span></div>
     </li>
     <li>
       <div class="collapsible-header"><i class="material-icons">whatshot</i>ABOUT ACTIVE COMPLAINTS</div>
-      <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.We hope you have enjoyed using Materialize and if you feel like it has helped you out and want to support the team you can help us by donating or backing us on Patreon. Any amount would help support and continue development on this project and is greatly appreciated.</span></div>
+      <div class="collapsible-body grey lighten-2"><span>Lorem ipsum dolor sit amet.We hope you have enjoyed using Materialize and if you feel like it has helped you out and want to support the team you can help us by donating or backing us on Patreon. Any amount would help support and continue development on this project and is greatly appreciated.</span></div>
     </li>
     <li>
       <div class="collapsible-header"><i class="material-icons">more</i>ABOUT RESOLVED COMPLAINTS</div>
-      <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.We hope you have enjoyed using Materialize and if you feel like it has helped you out and want to support the team you can help us by donating or backing us on Patreon. Any amount would help support and continue development on this project and is greatly appreciated.</span></div>
+      <div class="collapsible-body grey lighten-2"><span>Lorem ipsum dolor sit amet.We hope you have enjoyed using Materialize and if you feel like it has helped you out and want to support the team you can help us by donating or backing us on Patreon. Any amount would help support and continue development on this project and is greatly appreciated.</span></div>
     </li>
   </ul>
       </fieldset>
