--- a/resources/userPanel/dash.html
+++ b/resources/userPanel/dash.html
@@ -20,6 +20,9 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <link rel="stylesheet" href="/css/style.css" type="text/css">
+
+    <link rel="stylesheet" href="/css/ownstyle.css" type="text/css">
+
     <style type="text/css">
       header, main, footer {
     padding-left: 20px;
@@ -75,15 +78,15 @@
         <ul class="collapsible">
     <li>
       <div class="collapsible-header"><i class="material-icons">filter_drama</i>How To submit a complaint?</div>
-      <div class="collapsible-body"><span>Lorem ipsum dolor sit amet. We hope you have enjoyed using Materialize and if you feel like it has helped you out and want to support the team you can help us by donating or backing us on Patreon. Any amount would help support and continue development on this project and is greatly appreciated.</span></div>
+      <div class="collapsible-body grey lighten-2"><span>Lorem ipsum dolor sit amet. We hope you have enjoyed using Materialize and if you feel like it has helped you out and want to support the team you can help us by donating or backing us on Patreon. Any amount would help support and continue development on this project and is greatly appreciated.</span></div>
     </li>
     <li>
       <div class="collapsible-header"><i class="material-icons">place</i>what if complaint not resolve?</div>
-      <div class="collapsible-body"><span>Lorem ipsum dolor sit amet. We hope you have enjoyed using Materialize and if you feel like it has helped you out and want to support the team you can help us by donating or backing us on Patreon. Any amount would help support and continue development on this project and is greatly appreciated.</span></div>
+      <div class="collapsible-body grey lighten-2"><span>Lorem ipsum dolor sit amet. We hope you have enjoyed using Materialize and if you feel like it has helped you out and want to support the team you can help us by donating or backing us on Patreon. Any amount would help support and continue development on this project and is greatly appreciated.</span></div>
     </li>
     <li>
       <div class="collapsible-header"><i class="material-icons">whatshot</i>after submission, can i edit my complaint?</div>
-      <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.We hope you have enjoyed using Materialize and if you feel like it has helped you out and want to support the team you can help us by donating or backing us on Patreon. Any amount would help support and continue development on this project and is greatly appreciated.</span></div>
+      <div class="collapsible-body grey lighten-2"><span>Lorem ipsum dolor sit amet.We hope you have enjoyed using Materialize and if you feel like it has helped you out and want to support the team you can help us by donating or backing us on Patreon. Any amount would help support and continue development on this project and is greatly appreciated.</span></div>
     </li>
   </ul>
       </fieldset>
