--- a/resources/userPanel/addcomplaint.html
+++ b/resources/userPanel/addcomplaint.html
@@ -44,7 +44,7 @@
           <textarea name="cDescription" required id="textarea1" class="materialize-textarea"></textarea>
           <label for="textarea1">Write your Complaint</label>
   </div>
-  <button onclick="M.toast({html: 'New Complaint'})" class="btn waves-effect waves-light" type="submit" name="addComplaint">Submit
+  <button onclick="M.toast({html: 'New Complaint'})" class="btn waves-effect waves-light blue darken-2 right" type="submit" name="addComplaint">Submit
     <i class="material-icons right">send</i>
   </button>
       </form>    
