--- a/resources/userPanel/userProfile.html
+++ b/resources/userPanel/userProfile.html
@@ -14,18 +14,17 @@
         <br>
   
 
-    <div class="col s12 m6">
-      <div class="card-panel teal">
-        <span class="white-text"><h4>TOTAL COMPLAINT  {{totalCount}} </h4>
-        </span>
-      </div>
-    </div>
-    <div class="col s12 m6">
-      <div class="card-panel teal">
-        <span class="white-text"><h4>ACTIVE COMPLAINT {{activeCount}}  </h4>
-        </span>
-      </div>
-  </div>
+        <div class="col s12 m6">
+          <div class="card-panel yellow darken-2" style="border-radius: 2em;">
+            <span class="black-text"><h5>TOTAL COMPLAINT(S) :  {{totalCount}} </h5>
+            </span>
+          </div>
+        </div>
+        <div class="col s12 m6">
+          <div class="card-panel green darken-2" style="border-radius: 2em;">
+            <span class="white-text"><h5>ACTIVE COMPLAINT(S) :  {{activeCount}}  </h5>
+            </span>
+        </div>
   </fieldset>
    <div class="divider" style="height: 30px;margin-top: 10px;margin-bottom: 20px;"></div>
    <fieldset>
@@ -44,9 +43,9 @@
 
       </p>
       <br>
-       <a href="#modal2" class="waves-effect waves-light btn modal-trigger">Update Profile </a>
+       <a href="#modal2" class="waves-effect waves-light btn modal-trigger blue">Update Profile </a>
       <br><br>
-      <a href="#modal1" class="waves-effect waves-light btn modal-trigger">Change Passowrd</a>
+      <a href="#modal1" class="waves-effect waves-light btn modal-trigger orange darken-4">Change Passowrd</a>
     </li>
    {% endfor %}
   </ul>
